crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__escape_bad_unicode.snap
---
source: crates/nash-report/src/syntax/expr.rs
expression: "snapshot(Expr::String(StringError::Escape(Escape::BadUnicodeFormat(3)), 1, 9),\n\"value = \")"
---
BAD UNICODE ESCAPE
Region { start: Position { line: 1, column: 9 }, end: Position { line: 1, column: 12 } }

Malformed Unicode escape.

Use \u{0041}: four to six hexadecimal digits inside braces.
