crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__escape_short_unicode.snap
---
source: crates/nash-report/src/syntax/expr.rs
expression: "snapshot(Expr::String(StringError::Escape(Escape::BadUnicodeLength\n{ code: 5, expected: 4, actual: 1 }), 1, 9), \"value = \")"
---
BAD UNICODE ESCAPE
Region { start: Position { line: 1, column: 9 }, end: Position { line: 1, column: 14 } }

Unicode escape needs 4 digits, found 1.

Use four to six hexadecimal digits; adjust leading zeros.
