crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__escape_unknown.snap
---
source: crates/nash-report/src/syntax/expr.rs
description: "value = \"\\q\""
---
nash::syntax

  × Unknown escape sequence.
   ╭─[src/Main.nash:1:10]
 1 │ value = "\q"
   ·          ──
   ╰────
  help: Use \n, \r, \t, \", \', \\, or \u{0041}.
