crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__expr_dot_without_name.snap
---
source: crates/nash-report/src/syntax/expr.rs
expression: "snapshot(Expr::Dot(1, 9), \"value = \")"
---
EXPECTED ACCESSOR
Region { start: Position { line: 1, column: 9 }, end: Position { line: 1, column: 9 } }

Expected a record accessor.

Write a dot followed by a field name, such as `.name`.
