crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__expr_start_bad.snap
---
source: crates/nash-report/src/syntax/expr.rs
expression: "snapshot(Expr::Start(1, 9), \"value = \")"
---
MISSING EXPRESSION
Region { start: Position { line: 1, column: 9 }, end: Position { line: 1, column: 9 } }

Expected an expression in the `value` definition.

Add an expression or `todo` for an unfinished body.
