crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__fail_indentbody.snap
---
source: crates/nash-report/src/syntax/expr.rs
description: "value = fail\nTrue"
---
nash::syntax

  × Expected a body after `fail`.
   ╭─[src/Main.nash:2:1]
 1 │ value = fail
 2 │ True
   · ─
   ╰────
  help: Add an indented expression.
