crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__fail_indentmessage.snap
---
source: crates/nash-report/src/syntax/expr.rs
expression: "snapshot(Expr::Fail(&Keyword::IndentMessage(1, 9), 1, 9), \"value = \")"
---
MISSING MESSAGE
Region { start: Position { line: 1, column: 9 }, end: Position { line: 1, column: 9 } }

Expected a message for `fail`.

Add an indented message expression.
