crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__func_indent_body.snap
---
source: crates/nash-report/src/syntax/expr.rs
expression: "snapshot(Expr::Func(&Func::IndentBody(1, 9), 1, 9), \"value = \")"
---
MISSING EXPRESSION
Region { start: Position { line: 1, column: 9 }, end: Position { line: 1, column: 9 } }

Expected a function body after `->`.

Add an indented expression.
